--- a/index.html
+++ b/index.html
@@ -176,6 +176,13 @@
   <footer class="sitefoot">
     <p><strong>Unofficial notice:</strong> Independent, fan-operated site. Not affiliated with any university, athletics program, conference, or governing body.</p>
     <p><a href="#">Privacy</a> • <a href="#">Contact</a> • <a href="#">Accessibility</a></p>
+    <p class="muted">
+  Weather by <a href="https://open-meteo.com/" rel="nofollow">Open-Meteo</a> •
+  Schedule data via <a href="https://collegefootballdata.com" rel="nofollow">CollegeFootballData</a> •
+  Map data © <a href="https://www.openstreetmap.org/copyright">OSM contributors</a> •
+  Places data © Foursquare
+</p>
+
   </footer>
 
   <script type="module" src="assets/js/app.js"></script>
