--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Tennessee • Gameday Hub (Unofficial)</title>
   <meta name="description" content="Fan-run, unofficial Tennessee football weekend guide: schedule, specials, maps, and tips." />
-  <link rel="stylesheet" href="assets/css/styles.css" />
+  <link rel="stylesheet" href="assets/css/styles.css?v=2025-08-28-3">
+<script type="module" src="assets/js/app.js?v=2025-08-28-3"></script>
+
 
   <!-- Leaflet (map) -->
   <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css">
