--- a/index.html
+++ b/index.html
@@ -2,22 +2,19 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Tennessee • Gameday Hub (Unofficial)</title>
-  <meta name="description" content="Fan-run, unofficial Tennessee football weekend guide: schedule, specials, maps, and tips." />
-  <link rel="stylesheet" href="assets/css/styles.css?v=2025-08-28-3">
-<script type="module" src="assets/js/app.js?v=2025-08-28-3"></script>
-
-  <!-- Leaflet (map) -->
-  <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css">
-  <script defer src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>TENNESSEE • Gameday Hub (Unofficial)</title>
+  <meta name="description" content="Fan-run, unofficial hub for Tennessee football: schedule, specials, map, and tips." />
+  <link rel="stylesheet" href="assets/css/styles.css" />
 </head>
+
 <body>
   <a class="skip" href="#main">Skip to content</a>
 
-  <header class="topbar">
+  <!-- Top bar -->
+  <header class="topbar" role="banner">
     <div class="brand">TENNESSEE • <span>Gameday Hub</span></div>
-    <nav class="nav">
+    <nav class="nav" aria-label="Primary">
       <a href="#schedule">Schedule</a>
       <a href="#specials">Specials</a>
       <a href="#map">Map</a>
@@ -26,37 +23,37 @@
     </nav>
   </header>
 
-  <!-- TICKER (Top ribbon) -->
+  <!-- Top ribbon ticker -->
   <section class="ticker" aria-label="Gameday ticker">
-    <div class="ticker-inner">
-      <div class="ticker-track" id="tickerTrack" aria-live="polite"></div>
-    </div>
+    <div class="ticker-inner">Loading…</div>
   </section>
 
   <!-- HERO -->
   <section class="hero" role="banner" aria-label="Site hero">
-    <div class="hero-bg" style="background-image: url('');"></div>
     <div class="hero-inner">
       <h1 class="hero-title">TENNESSEE</h1>
       <p class="hero-sub">Fan-run. Unofficial. Built by fans for fans.</p>
+
       <div class="hero-actions">
         <a class="btn" href="#schedule">View Schedule</a>
         <a class="btn ghost" href="#specials">Find Specials</a>
         <a class="btn ghost" href="#submit">Submit a Listing</a>
-        <a id="addCalHero" class="btn ghost" href="#" download>Add to Calendar</a>
+        <a class="btn ghost" href="#" data-add-cal>Add to Calendar</a>
       </div>
+
       <div class="mini-countdown" aria-live="polite">
         <span>Kickoff in</span>
         <strong id="miniDays">00</strong>d :
         <strong id="miniHours">00</strong>h :
         <strong id="miniMins">00</strong>m
       </div>
-      <div class="data-updated"><small id="dataUpdated">Data updated —</small></div>
+
+      <p class="updated">Data updated — <span data-last-updated>—</span></p>
     </div>
   </section>
 
   <main id="main" class="wrap" aria-label="Main content">
-    <!-- QUICK GLANCE ROW -->
+    <!-- QUICK GLANCE -->
     <section class="row-quick">
       <!-- Upcoming Game -->
       <article class="card">
@@ -64,21 +61,21 @@
         <p class="big"><strong>Tennessee</strong> <span class="vs">vs</span> <span id="qOpp">Opponent</span></p>
         <p class="sub"><span id="qDate">Date</span> • <span id="qTime">Time</span></p>
         <p class="muted" id="qVenue">Venue, Knoxville, TN</p>
-        <p><a id="addCalCard" class="btn btn-small ghost" href="#" download>Add to Calendar</a></p>
+        <p><a class="btn ghost btn-slim" href="#" data-add-cal>Add to Calendar</a></p>
       </article>
 
-      <!-- Weather -->
+      <!-- Weather (3-day) -->
       <article class="card">
         <h2 class="hd">Weather (3-day)</h2>
         <ul class="wx">
-          <li><b>Fri</b> <span>—</span> <em>—</em></li>
-          <li><b>Sat</b> <span>—</span> <em>—</em></li>
-          <li><b>Sun</b> <span>—</span> <em>—</em></li>
+          <li id="wx0"><b>—</b> <span>—</span> <em>—</em></li>
+          <li id="wx1"><b>—</b> <span>—</span> <em>—</em></li>
+          <li id="wx2"><b>—</b> <span>—</span> <em>—</em></li>
         </ul>
         <p class="muted">Forecasts change—check again closer to kickoff.</p>
       </article>
 
-      <!-- This Week in Knoxville -->
+      <!-- This week -->
       <article class="card">
         <h2 class="hd">This Week in Knoxville</h2>
         <ul class="links">
@@ -91,7 +88,7 @@
 
     <!-- MAIN GRID -->
     <section class="grid-main">
-      <!-- LEFT (8 cols) -->
+      <!-- LEFT -->
       <div class="left">
         <!-- Schedule -->
         <section id="schedule" class="card">
@@ -110,28 +107,30 @@
         <!-- Featured specials -->
         <section id="specials" class="card">
           <h2 class="hd">Featured Specials</h2>
-          <div class="specials-grid" id="specialsGrid"></div>
+          <div id="specialsGrid" class="specials-grid"></div>
           <p class="muted">Listings are community-submitted. Call ahead to confirm.</p>
         </section>
       </div>
 
-      <!-- RIGHT (4 cols) -->
+      <!-- RIGHT -->
       <aside class="right">
-        <!-- Map card (Leaflet) -->
+        <!-- Map placeholder -->
         <section id="map" class="card">
-          <h2 class="hd">Map</h2>
-          <div id="leafletMap" class="leaflet-map" role="region" aria-label="Places open now near Knoxville"></div>
-          <p class="muted sm" id="mapNote">
-            Pins show a sample of nearby food/drink/watch spots.
-            Data © Foursquare. Map © OpenStreetMap contributors.
-          </p>
+          <h2 class="hd">Map (coming soon)</h2>
+          <div class="map-placeholder">
+            <div class="pin pin-food">Food</div>
+            <div class="pin pin-drink">Drinks</div>
+            <div class="pin pin-watch">Watch</div>
+            <div class="pin pin-parking">Parking</div>
+          </div>
+          <p class="muted">We’ll add an interactive map with categories and “Open now”.</p>
         </section>
 
-        <!-- Submit CTA -->
+        <!-- Submit -->
         <section id="submit" class="card cta">
           <h2 class="hd">Submit a Listing</h2>
           <p>Restaurant, bar, shop, or event with a gameday special? Share it with fans.</p>
-          <a class="btn" href="#submit-form">Open form</a>
+          <a class="btn" href="#">Open form</a>
         </section>
 
         <!-- Newsletter -->
@@ -139,7 +138,7 @@
           <h2 class="hd">Newsletter</h2>
           <p>Get a quick gameday morning email: kickoff time, weather, and new specials.</p>
           <form class="nl" onsubmit="event.preventDefault(); alert('Thanks!');">
-            <input type="email" placeholder="you@example.com" required>
+            <input type="email" placeholder="you@example.com" required />
             <button class="btn">Subscribe</button>
           </form>
           <p class="muted">We don’t sell your data. Unsubscribe anytime.</p>
@@ -158,47 +157,42 @@
           <div class="blk"><span id="cdS">00</span><em>sec</em></div>
         </div>
       </div>
+
       <div class="guide-grid">
         <article><h3>Getting There</h3><ul>
           <li>Rideshare or public lots; expect road closures near campus.</li>
           <li>Plan 60–90 minutes for traffic and entry queues.</li>
           <li>Pick a meetup spot in case phones die.</li>
         </ul></article>
+
         <article><h3>Entry & Bags</h3><ul>
           <li>Many venues have clear-bag rules and metal detectors.</li>
           <li>Leave large items, outside alcohol, and pointed umbrellas at home.</li>
           <li>Always verify with the official event page before you go.</li>
         </ul></article>
+
         <article><h3>Food & Water</h3><ul>
           <li>Many vendors are cashless—bring a card or mobile pay.</li>
           <li>Hydrate early; find refill spots on concourses.</li>
           <li>Family sections are great with kids; consider ear protection.</li>
         </ul></article>
+
         <article><h3>Accessibility</h3><ul>
           <li>Check ADA parking, shuttle drop-offs, elevators, and seating.</li>
           <li>Service animals typically permitted—follow venue guidance.</li>
           <li>Contact accessibility office ahead for assistance.</li>
         </ul></article>
       </div>
+
       <p class="muted">Independent fan resource. Not affiliated with any university, athletics program, conference, or governing body.</p>
     </section>
   </main>
 
   <footer class="sitefoot">
-    <p>© 2025 HC Web Labs. Content licensed under
-      <a href="/LICENSE-CONTENT">CC BY-NC-ND 4.0</a> unless noted.
-      Code © HC Web Design Labs (all rights reserved).
-    </p>
-    <p>Independent, fan-operated site. Not affiliated with or endorsed by any university, athletics program, conference, or governing body.</p>
-    <p class="muted">
-      Weather by <a href="https://open-meteo.com/" rel="nofollow">Open-Meteo</a> •
-      Schedule data via <a href="https://collegefootballdata.com" rel="nofollow">CollegeFootballData</a> •
-      Map data © <a href="https://www.openstreetmap.org/copyright">OSM contributors</a> •
-      Places data © Foursquare
-    </p>
+    <p><strong>Unofficial notice:</strong> Independent, fan-operated site. Not affiliated with any university, athletics program, conference, or governing body.</p>
+    <p><a href="#">Privacy</a> • <a href="#">Contact</a> • <a href="#">Accessibility</a></p>
   </footer>
 
   <script type="module" src="assets/js/app.js"></script>
 </body>
 </html>
-
