--- a/submit.html
+++ b/submit.html
@@ -3,8 +3,18 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Submit a Listing • TENNESSEE Gameday Hub</title>
-  <link rel="stylesheet" href="assets/css/styles.css" />
+  <title>Submit a Listing • Tennessee Gameday Hub (Unofficial)</title>
+  <link rel="stylesheet" href="assets/css/styles.css?v=2025-08-28-4" />
+  <style>
+    .grid2{display:grid; grid-template-columns:repeat(12,minmax(0,1fr)); gap:20px}
+    .grid2 > .card{grid-column:span 8}
+    .grid2 > .side{grid-column:span 4}
+    @media (max-width:980px){ .grid2 > .card, .grid2 > .side{grid-column:span 12} }
+    .field{display:grid; gap:6px; margin:10px 0}
+    .field input,.field textarea, .field select{
+      background:#0d1117; color:#fff; border:1px solid var(--line); border-radius:10px; padding:10px 12px
+    }
+  </style>
 </head>
 <body>
   <a class="skip" href="#main">Skip to content</a>
@@ -16,53 +26,67 @@
       <a href="specials.html">Specials</a>
       <a href="map.html">Map</a>
       <a href="guide.html">Guide</a>
-      <a class="btn btn-small" href="submit.html">Submit</a>
+      <a class="btn btn-small active" href="submit.html">Submit</a>
     </nav>
   </header>
 
-  <main id="main" class="wrap">
+  <section class="ticker" aria-label="Gameday ticker"><div class="ticker-inner">Loading…</div></section>
+
+  <main id="main" class="wrap grid2">
     <section class="card">
       <h1 class="hd">Submit a Listing</h1>
-      <p>Restaurant, bar, shop, or event with a gameday special? Add it for fans.</p>
+      <p class="muted" style="margin-top:-6px">Restaurant, bar, shop, or event with a gameday special? Share it with fans.</p>
 
-      <div class="card" style="display:grid; gap:10px">
-        <form id="dealForm" class="nl" style="display:grid; gap:10px">
-          <input name="title" placeholder="Deal title (e.g., Wings + Pitchers)" required />
-          <input name="biz"   placeholder="Business name (e.g., Checkerboard Tavern)" required />
-          <input name="area"  placeholder="Area (Downtown / The Strip / Old City…)" required />
-          <input name="time"  placeholder="Time window (e.g., 4–7pm, Sat–Sun)" required />
-          <input name="link"  placeholder="Details link (menu, post, event URL)" />
-          <div style="display:flex; gap:10px; flex-wrap:wrap">
-            <button type="button" id="copyJson" class="btn">Copy JSON</button>
-            <a class="btn ghost" href="specials.html">View Specials</a>
-          </div>
-        </form>
-      </div>
+      <!-- Simple static form; swap action for your processor (e.g., Formspree) -->
+      <form onsubmit="event.preventDefault(); alert('Thanks! We’ll review and post if approved.'); this.reset();">
+        <div class="field"><label>Business*</label><input required placeholder="Business name"></div>
+        <div class="field"><label>Website / Menu URL</label><input type="url" placeholder="https://"></div>
+        <div class="field"><label>Area</label>
+          <select>
+            <option>Downtown</option><option>The Strip</option><option>Old City</option><option>North Knox</option><option>West</option>
+          </select>
+        </div>
+        <div class="field"><label>Deal title*</label><input required placeholder="e.g., Wings + Pitchers"></div>
+        <div class="field"><label>Valid days*</label><input required placeholder="Gameday only / Fri–Sun / All week"></div>
+        <div class="field"><label>Time window</label><input placeholder="e.g., 4pm–7pm"></div>
+        <div class="field"><label>Short description*</label><textarea required rows="4" placeholder="1–2 sentences. No emojis or ALL CAPS, please."></textarea></div>
 
-      <h2 class="hd" style="margin-top:14px">Preview</h2>
-      <div id="preview" class="specials-grid"></div>
+        <div class="field"><label>Contact email*</label><input required type="email" placeholder="you@example.com"></div>
+
+        <div class="field">
+          <label><input type="checkbox" required> I confirm I’m authorized to submit this deal, and I agree this info may be published and edited for clarity.</label>
+        </div>
+        <div class="field">
+          <label><input type="checkbox" required> I’ve read the Content Guidelines and Privacy notice.</label>
+        </div>
+
+        <button class="btn" type="submit">Submit Deal</button>
+      </form>
+
+      <p class="muted" style="margin-top:10px">Data updated — <span data-last-updated>—</span></p>
     </section>
 
-    <section class="card">
-      <h2 class="hd">Content guidelines (read first)</h2>
+    <aside class="card side">
+      <h2 class="hd">Content Guidelines</h2>
       <ul>
-        <li>Must be relevant to gameday weekend or watch-party crowd.</li>
-        <li>Family-friendly wording; no offensive or adult content.</li>
-        <li>Include a real business name, neighborhood/area, and a time window.</li>
-        <li>By submitting, you confirm you’re authorized to share this info publicly.</li>
-        <li>Listings may be edited for clarity, format, or obvious typos.</li>
+        <li>Keep it factual and family-friendly. No harassment, hate speech, or adult content.</li>
+        <li>Deals must be genuine and publicly available during stated times.</li>
+        <li>No copyrighted logos or marks; use generic stadium/city language.</li>
+        <li>Use sentence case; avoid emoji, excessive caps, or marketing fluff.</li>
+        <li>Submissions are moderated; we may edit for clarity/length or decline.</li>
+        <li>By submitting, you confirm you have permission to share this info.</li>
       </ul>
-      <p class="muted">Independent site. Not affiliated with any university, athletics program, or governing body.</p>
-    </section>
+      <h3 style="margin-top:12px">Privacy</h3>
+      <p class="muted">We only use your email for follow-ups about your listing. We don’t sell your data.</p>
+      <p class="muted">Independent fan resource. Not affiliated with any university, athletics program, conference, or governing body.</p>
+    </aside>
   </main>
 
   <footer class="sitefoot">
-    <p>Independent fan resource • Not affiliated with any university or athletics program.</p>
+    <p><strong>Unofficial notice:</strong> Independent, fan-operated site. Not affiliated with any university, athletics program, conference, or governing body.</p>
+    <p><a href="schedule.html">Schedule</a> • <a href="specials.html">Specials</a> • <a href="map.html">Map</a> • <a href="guide.html">Guide</a></p>
   </footer>
 
-  <script type="module">
-    import { initSubmitPage } from './assets/js/page.js';
-    document.addEventListener('DOMContentLoaded', initSubmitPage);
-  </script>
+  <script type="module" src="assets/js/app.js?v=2025-08-28-4"></script>
 </body>
 </html>
